--- a/README.me
+++ b/README.me
@@ -1,10 +1,9 @@
 # JJJWeb
 
-For development download and buld JJJRMI into the same root directory as JJJWeb.  Then call the cp script from
+For development download and build JJJRMI into the same root directory as JJJWeb.  Then call the cp script from
 package.json (npm run cp); this will copy the jjjrmi.partial.js file from JJJRMI to JJJWEB.
 
 To create a deployment jar call pack-js from package.json (npm run packijs).
-
 
 Filesystem Layout & Naming
 
