--- a/README.me
+++ b/README.me
@@ -1,5 +1,8 @@
 # JJJWeb
 
+git clone git@github.com:Thaerious/JJJWeb.git
+npm run cp
+
 For development download and build JJJRMI into the same root directory as JJJWeb.  Then call the cp script from
 package.json (npm run cp); this will copy the jjjrmi.partial.js file from JJJRMI to JJJWEB.
 
